[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "checkvsphere"
readme = "README.md"
description = "check_vsphere monitoring plugin"
version = "0.3.9"
requires-python = ">= 3.6"
authors = [
    { name = "Danijel Tasov", email = "danijel.tasov@consol.de" }
]
dependencies = [
    "pyvmomi >= 8.0.3.0.1, < 9",
    "monplugin >= 0.6.1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]

[project.scripts]
check_vsphere = "checkvsphere.cli:main"

[project.urls]
"homepage" = "https://github.com/consol/check_vsphere"
"documentation" = "https://consol.github.io/check_vsphere"
"repository" = "https://github.com/consol/check_vsphere.git"
"issues" = "https://github.com/consol/check_vsphere/issues"

[tool.flit.sdist]
exclude = ["docs/", "stuff/", "dist/"]
